feat: nbdev init

--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@
 # See https://github.com/fastai/nbdev/blob/master/settings.ini for examples.
 
 ### Python library ###
-repo = nbdev-hello-world
+repo = coding
 lib_name = %(repo)s
 version = 0.0.1
 min_python = 3.7
@@ -12,7 +12,7 @@ black_formatting = False
 
 ### nbdev ###
 doc_path = _docs
-lib_path = nbdev_hello_world
+lib_path = coding
 nbs_path = nbs
 recursive = True
 tst_flags = notest
@@ -28,16 +28,18 @@ title = %(lib_name)s
 
 ### PyPI ###
 audience = Developers
-author = seem
-author_email = mwlorgat@gmail.com
-copyright = 2023 onwards, %(author)s
-description = Hello world from nbdev
+author = Mohiuddin Mohammed
+author_email = fd.mohiuddin@gmail.com
+copyright = 2024 onwards, %(author)s
+description = project to document learning
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
-user = fastai
+user = mohammed8079
 
 ### Optional ###
 # requirements = fastcore pandas
 # dev_requirements = 
 # console_scripts =
+# conda_user = 
+# package_data =
